Prepare for GTNET and minor fixes